--- a/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
+++ b/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuDetailViewController" customModule="banmeshi" customModuleProvider="target">
             <connections>
+                <outlet property="editBtn" destination="Oqg-c5-0Aj" id="qG9-IQ-Pez"/>
                 <outlet property="introductionLabel" destination="HLg-ip-WNG" id="8A0-z0-vxM"/>
                 <outlet property="introductionTableView" destination="9K8-Sb-cRl" id="Kf9-FV-pzc"/>
                 <outlet property="lineView" destination="EkS-Ws-KYp" id="myc-UC-nZV"/>
@@ -23,13 +24,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty_coupon" translatesAutoresizingMaskIntoConstraints="NO" id="L2Z-AD-5JR">
-                    <rect key="frame" x="0.0" y="44" width="414" height="250"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="220"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="250" id="XKh-iv-XNg"/>
+                        <constraint firstAttribute="height" constant="220" id="XKh-iv-XNg"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="简介" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHb-4R-pRF">
-                    <rect key="frame" x="0.0" y="309" width="414" height="21"/>
+                    <rect key="frame" x="0.0" y="279" width="414" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="gri-6f-Ijo"/>
                     </constraints>
@@ -38,7 +39,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZIb-Re-4hy">
-                    <rect key="frame" x="20" y="340" width="374" height="150"/>
+                    <rect key="frame" x="20" y="310" width="374" height="150"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLg-ip-WNG">
                             <rect key="frame" x="20" y="10" width="334" height="0.0"/>
@@ -76,43 +77,86 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EkS-Ws-KYp">
-                    <rect key="frame" x="0.0" y="500" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="470" width="414" height="1"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="e5l-R4-Vz9"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9K8-Sb-cRl">
-                    <rect key="frame" x="0.0" y="501" width="414" height="361"/>
+                    <rect key="frame" x="0.0" y="520" width="414" height="342"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Orz-Hd-Fp2">
+                    <rect key="frame" x="0.0" y="519" width="414" height="1"/>
+                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="uBN-N1-vTw"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jdl-lZ-Sg8">
+                    <rect key="frame" x="0.0" y="269" width="414" height="1"/>
+                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="s7R-Yf-lRk"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oqg-c5-0Aj">
+                    <rect key="frame" x="354" y="490" width="60" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="60" id="JfS-dL-uk5"/>
+                        <constraint firstAttribute="height" constant="30" id="q7V-Gv-vBg"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="编辑">
+                        <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
+                        <color key="baseForegroundColor" systemColor="labelColor"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="tapEditBtn:" destination="-1" eventType="touchUpInside" id="kKe-vt-hTj"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="EkS-Ws-KYp" secondAttribute="bottom" id="2OE-KU-Lxi"/>
+                <constraint firstAttribute="trailing" secondItem="Jdl-lZ-Sg8" secondAttribute="trailing" id="5EW-g9-W0T"/>
+                <constraint firstItem="Oqg-c5-0Aj" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="7bN-E3-1PQ"/>
+                <constraint firstItem="Orz-Hd-Fp2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ehw-mg-lbI"/>
+                <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="Oqg-c5-0Aj" secondAttribute="bottom" id="FcB-oB-t2Q"/>
+                <constraint firstItem="Jdl-lZ-Sg8" firstAttribute="top" secondItem="L2Z-AD-5JR" secondAttribute="bottom" constant="5" id="Gd4-Xd-cHN"/>
+                <constraint firstItem="Jdl-lZ-Sg8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ic8-fg-oaI"/>
                 <constraint firstItem="L2Z-AD-5JR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LSF-cv-bc9"/>
+                <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="ZIb-Re-4hy" secondAttribute="bottom" constant="60" id="M98-Km-ekJ"/>
+                <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="Orz-Hd-Fp2" secondAttribute="bottom" id="MIH-r4-DGr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="L2Z-AD-5JR" secondAttribute="trailing" id="OY0-eX-O3a"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="9K8-Sb-cRl" secondAttribute="bottom" id="T4b-Ip-RdI"/>
                 <constraint firstItem="xHb-4R-pRF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="TdR-NG-Lej"/>
                 <constraint firstItem="xHb-4R-pRF" firstAttribute="top" secondItem="L2Z-AD-5JR" secondAttribute="bottom" constant="15" id="UIa-gC-74E"/>
                 <constraint firstItem="ZIb-Re-4hy" firstAttribute="top" secondItem="xHb-4R-pRF" secondAttribute="bottom" constant="10" id="UJi-rZ-Ie0"/>
+                <constraint firstItem="EkS-Ws-KYp" firstAttribute="top" secondItem="ZIb-Re-4hy" secondAttribute="bottom" constant="10" id="aS1-UJ-l4o"/>
                 <constraint firstItem="L2Z-AD-5JR" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bz9-eI-kKa"/>
                 <constraint firstItem="9K8-Sb-cRl" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cKG-zj-Ed9"/>
+                <constraint firstAttribute="trailing" secondItem="Orz-Hd-Fp2" secondAttribute="trailing" id="h3R-1U-Av2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xHb-4R-pRF" secondAttribute="trailing" id="hXa-gi-lTU"/>
                 <constraint firstItem="ZIb-Re-4hy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="hiQ-5Z-SHv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="EkS-Ws-KYp" secondAttribute="trailing" id="jKv-UZ-sCr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZIb-Re-4hy" secondAttribute="trailing" constant="20" id="pgZ-ug-Ccc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9K8-Sb-cRl" secondAttribute="trailing" id="sRv-bq-uOg"/>
                 <constraint firstItem="EkS-Ws-KYp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="t3z-VW-K0w"/>
-                <constraint firstItem="EkS-Ws-KYp" firstAttribute="top" secondItem="ZIb-Re-4hy" secondAttribute="bottom" constant="10" id="x1d-MS-zsR"/>
             </constraints>
             <point key="canvasLocation" x="132" y="59"/>
         </view>
     </objects>
     <resources>
         <image name="empty_coupon" width="242" height="188"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
